creada la pagina buy con estilos pero sin comportamiento

--- a/moreInformation.html
+++ b/moreInformation.html
@@ -13,7 +13,7 @@
         <script defer src="js/estructuraBase.js"></script>
         <script defer src="js/moreInformation.js"></script>
 
-        <title>Cloud Hosting</title>
+        <title>CL-More Information</title>
     </head>
 <body>
     <header>
