--- a/buy.html
+++ b/buy.html
@@ -61,7 +61,7 @@
     </section>
 
     <footer>
-        All rights reserved Cloud Host©
+        All rights reserved Cloud Hosting©
     </footer>
 
 
