--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
 
     <footer>
-        All rights reserved Cloud Host©
+        All rights reserved Cloud Hosting©
     </footer>
 
 
