--- a/moreInformation.html
+++ b/moreInformation.html
@@ -123,7 +123,7 @@
     </section>
 
     <footer>
-        All rights reserved Cloud Host©
+        All rights reserved Cloud Hosting©
     </footer>
 
 
