--- a/moreInformation.html
+++ b/moreInformation.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300&family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
         
         <link rel="stylesheet" href="css/estructuraBase.css">
+        <link rel="stylesheet" href="css/basicComponents.css">
         <link rel="stylesheet" href="css/moreInformation.css">
         <script defer src="js/estructuraBase.js"></script>
         <script defer src="js/moreInformation.js"></script>
@@ -61,7 +62,7 @@
                 <li>2 Subdomains</li>
             </ul>
             <hr class="division below">
-            <a href="buy.html" class="btn-buy">
+            <a href="buy.html" class="btn-buy blueButtonFlex">
                 buy
             </a>    
         </article>
@@ -88,7 +89,7 @@
                 <li>100 Subdomains</li>
             </ul>
             <hr class="division below">
-            <a href="buy.html" class="btn-buy">
+            <a href="buy.html" class="btn-buy blueButtonFlex">
                 buy
             </a>
         </article>
@@ -115,7 +116,7 @@
                 <li>200 Subdomains</li>
             </ul>
             <hr class="division below">
-            <a href="buy.html" class="btn-buy">
+            <a href="buy.html" class="btn-buy blueButtonFlex">
                 buy
             </a>
         </article>
