--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@300&family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/estructuraBase.css">
+        <link rel="stylesheet" href="css/basicComponents.css">
         <link rel="stylesheet" href="css/home.css">
         <script defer src="js/estructuraBase.js"></script>
         <title>Cloud Hosting</title>
@@ -40,7 +41,7 @@
             Global hosting <br> for all developers <br> who are looking for <br> velocity and efficency <br> for web pages
         </div>
         
-        <a href="moreInformation.html" class="btn-more_information">
+        <a href="moreInformation.html" class="btn-more_information blueButtonFlex">
             More information
         </a>
     </section>
