--- a/users.html
+++ b/users.html
@@ -54,6 +54,7 @@
     <div class="divButton" id="divMoreComment">
         <button id="moreComments" class="blueButton">more comments</button>
     </div>
+    <h1 id="toFilter" class="title">Filter the comments</h1>
     <section class="filtro">
         <input id="textoAFiltrar" type="text" placeholder="name to filter...">
         <div id="membershipAFiltrar">
@@ -82,7 +83,7 @@
                 </select>
             </div>
         </div>
-        <textarea name="comment" placeholder="place your comment..."  ></textarea>
+        <textarea name="comment" placeholder="place your comment..."  required></textarea>
         <div class="buttonsForm">
             <input class="editButton blueButton cancel hide" type="submit" value="cancel">
             <input class="editButton blueButton confirm hide" type="submit" value="confirm">
