añadido el botón sendx3

--- a/users.html
+++ b/users.html
@@ -87,6 +87,7 @@
         <div class="buttonsForm">
             <input class="editButton blueButton cancel hide" type="submit" value="cancel">
             <input class="editButton blueButton confirm hide" type="submit" value="confirm">
+            <input class="editButton blueButton sendx3Form" type="submit" value="send x3">
             <input class="editButton blueButton sendForm" type="submit" value="send">
         </div>
         <hr class="divison">
